fixed phone issues of spacing

--- a/app/components/home1/BoardMembers.module.css
+++ b/app/components/home1/BoardMembers.module.css
@@ -76,4 +76,7 @@
   .bmCol2Inner {
     row-gap: clamp(10px, 1vh, 1vh);
   }
+  .BoardMembers {
+    padding-bottom: 0 !important;
+  }
 }
