--- a/app/components/home1/NewsHome.module.css
+++ b/app/components/home1/NewsHome.module.css
@@ -69,4 +69,7 @@
   .nhCol2Inner2Inner img {
     width: 180px;
   }
+  .NewsHome {
+    padding: 60px 0;
+  }
 }
